03/10/2023
- when looking for a bearer token an exception occured if the
  Authorization header didn't contain any space character;
  see #473

02/03/2023
- release 1.7.6-3 of luarock pinning lua-resty-session dependency to
  not go beyond 3.1ß

30/01/2023
- release 1.7.6

01/13/2023
- when parsing JWKs with an x5c claim the claim was wronly assumed to
  be base64url encoded instead of base64 encoded;
  see #460

11/06/2022
- a new option local_redirect_path can be used is situations where the
  redirect_uri as is visible to lua-resty-openidc is not simply the path
  segment of the configured redirect_uri but something more
  complex. This is needed for example if a reverse proxy in front of
  your server adds a prefix of rewrites URIs in a more complex way;
  see #453

03/05/2022
- improved error message when expecting a Bearer token header and the
  header doesn't contain a space character; see #421

01/04/2022
- added support for OAuth 2.0 Form Post Response Mode.

12/23/2021
- use Github actions for docker-based CI; delete Travis files

12/21/2021
- release 1.7.5

12/17/2021
- added id_token and the token endpoint response as additional
  arguments to the on_authenticated lifecycle hook; see #413

11/19/2021
- added opts.discovery_expires_in in order to make cache expiry of
  OpenID Connect Discovery responses configurable.

11/06/2021
- added public functions that allow tokens to be revoked without
  destroying the current session; see #402; thanks to
  @thorstenfleischmann

- when the x5c claim of a JWK is an empty array it will be ignored
  rather than cause an error; see #406

- `authenticate`'s last parameter can now be an existing session
  rather than options for starting a new one: see #405; thanks to
  @thorstenfleischmann

09/23/2021
- if lifecyle handlers return truthy values they cause the operation
  they are handlers of to fail; see #384; thanks to @arcivanov

- added opts.cache_segment as option to shard the cache used by token